- Create multiple now allows for rows to be deleted.
- Create multiple will only show one message when multiple items could not be saved.
- Update All will now process all items and show a combined message on failures (due to constraints) rather then individual messages.
- Filter dialog will keep the selected field and operator when adding entries.

[New]
- New Russian translations has been added (not finalized) - major thanks to Ilya Sigidin.
- Attachments can now be added to items. These documents are stored within the Data Crow data set in a compressed format.
  All main modules allow for attachments to be added.

[Fixed]
- Incorrect alignment of the filter label on the related items tab.
- Update all dialog; could not create new reference using the icon for the reference / references field.
- Create multiple items dialog; sometimes, for custom modules, no fields are displayed. Now, all enabled and editable fields are displayed. 
- Item form settings; sometimes it does not show any fields available for assignment.
- UI scaling session can get lost when switching between user folders.
- Filter dialog shows value field for is filled / is empty operator when switching between fields.
- OpenLibrary search: edition data mix up (sometimes) causing incorrect results
- OpenLibrary search: language not imported when searching on ISBN
- OpenLibrary search: ISBN10 and ISBN13 should always be filled but are sometimes blank

[Main things TODO]
- Image sizes - maximum image size
- Store images to temp folder for online searches to prevent high memory usage (byte[] stored in memory)


--------------------------------------------------------------------
Data Crow version 4.9.1                       Released on 2023-06-08
--------------------------------------------------------------------
Many thanks to Ariel Chyłek for all the translation work and to SandBird for the extensive testing.

[Fixed]