@@ -126,7 +126,6 @@ public abstract class DcRepository {
      */
     public static final class Settings {
     	public static final String stMaximumImageResolution = "max_image_resolution";
-    	public static final String stMaximumImageResolutionAsked = "max_image_resolution_asked";
     	public static final String stMaximumImageResolutionConvertOnStartup = "convert_on_startup";
     	public static final String stIsUpgraded = "is_upgraded";
     	public static final String stMaximumAttachmentFileSize = "max_attachment_file_size";
