@@ -1,3 +1,4 @@
+lblImageSizeConversion = Image Size Conversion
 lblConvertImagesSizes = Convert Image Sizes
 lblMaximumImageResolution = Maximum image resolution
 lblSizeLimits = Size Limits
