@@ -1,4 +1,5 @@
-msgConvertImages = With this version of Data Crow a maximum resolution can be set for images to minimize disk space and memory usage. Below you can set the maximum resolution after which Data Crow will resize all of your images. They will be scaled in line with the maximum whilst protecting their aspect ratio. This process is irreversible; you cannot scale them to a larger resolution only to a smaller one after this process has been completed. You can also choose to allow unscaled images to be stored, simply select the empty option from the drop down. 
+msgImageConversionFailed = Image conversion has failed. Please review the log, correct the errors and continue with the upgrade on the next startup of Data Crow.
+msgConvertImages = With this version of Data Crow a maximum resolution can be set for images to minimize disk space and memory usage.\r\n\r\nBelow you can set the maximum resolution after which Data Crow will resize all of your images. They will be scaled in line with the maximum whilst protecting their aspect ratio.\r\n\r\nThis process is irreversible; you cannot scale them to a larger resolution only to a smaller one after this process has been completed. 
 msgFileIsTooLarge = The selected file (size is %1 KB) cannot be added as it exceeds the maximum file size limit as set in the settings (%2 KB)
 msgAttachmentAlreadyExistsOverwrite = The attachment you are trying to add already exists for the current item. Do you want to continue and overwrite the existing attachment?
 msgCouldNotReadAttachment = The selected file could not be read
