@@ -10,6 +10,7 @@ Data Crow version 4.10                        Released on 2023-08-xx
 - Create multiple will only show one message when multiple items could not be saved.
 - Update All will now process all items and show a combined message on failures (due to constraints) rather then individual messages.
 - Filter dialog will keep the selected field and operator when adding entries.
+- Extended the image formats supported by Data Crow.
 
 [New]
 - New Russian translations has been added (not finalized) - major thanks to Ilya Sigidin.
